@@ -2,3 +2,11 @@ Jan 8, 2012
 
 Updated Makefile, tlc5940.c, tlc5940.h to use the newest multiplexing code,
 which has some major speed improvements.
+
+Feb 27, 2012 JBL
+
+Modified to use shift register for multiplexing
+
+Feb 29, 2012 JBL
+
+Modified demo code to do plasma effect on red-green LED Matrix
